fixed layout shift on animation

--- a/src/components/StartSection/TypingText/TypingText.module.css
+++ b/src/components/StartSection/TypingText/TypingText.module.css
@@ -2,6 +2,8 @@
     font-size: 2rem;
     font-weight: 400;
     margin: 0;
+
+    height: 5rem;
 }
 
 .animated_caret {
